--- a/style.css
+++ b/style.css
@@ -15,6 +15,20 @@
   object-position: bottom;
 }
 
+.rheo-banner a {
+  display: flex;
+  justify-content: center;
+}
+.rheo-banner img {
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+  object-position: center;
+  filter: sepia(1);
+  border-radius: 2em;
+}
+
+
 .people {
   display: grid; 
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -32,8 +46,12 @@
 .person div {
   text-align: center;
 }
-
+  
 /* Generic styles */
+
+h3 {
+  margin-bottom: 0;
+}
 
 body {
   background-color: var(--background-color);
