--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 :root {
   --background-color: #f9f6f0;
   --max-width: 650px;
@@ -30,17 +32,25 @@
 
 
 .people {
-  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: flex; 
+  justify-content: flex-start 
   /* grid-template-rows: a; */
-  gap: 5px;
   width: 100%;
 }
+.person {
+  margin: 0 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .person img {
   width: 150px;
   height: 150px;
   object-fit: cover;
   object-position: center;
+  border-radius: 50%;
 }
 
 .person div {
